# slimcone2

./: .gitignore  README.txt  build_code.yaml  build_symlinks.yaml  copy_result_files.yaml  get_data.yaml  merge.py  mystatistics.py  package.yaml  profile-all.py  profile.py  replaceheader.py  run_all.yaml  run_experiments.yaml  suffixcolumnorder.py
common/: config.py  exec_utils.py  plot_utils.py  stat_utils.py  utils.py  validation.py  xml_utils.py
paper/: Makefile  a-memory-efficient-approach.tex  appendix.tex  background-notations.tex  bibliography-all.bib  commands.tex  conclusion-future-work.tex  cone.tex  efficient-index-updates.tex  empirical-evaluation.tex  introduction.tex  merge.tex  paper.tex  principal-idea.tex  related-work.tex
paper/csv/fig12_ab/: heap-peak-vary-document-size-k10.stat  timingindexing-vary-document-size-k10.stat
paper/csv/fig12_cd/: heap-peak-vary-document-size-k10.stat  timingindexing-vary-document-size-k10.stat
paper/csv/fig12_e/: timingupdate-vary-ops-k10.stat
paper/csv/fig12_f/: timingupdate-vary-ops-k10.stat
paper/csv/fig13_ab/: timingfiltering-vary-document-size-k10.stat  verificationstotal-vary-document-size-k10.stat
paper/csv/fig13_cd/: timingfiltering-vary-document-size-k10.stat  verificationstotal-vary-document-size-k10.stat
paper/figs/: baseline-inverted-list-index-2d-grid.tex  baseline-inverted-list-index-cone.tex  inverted-list-index-materialized-example.tex  inverted-list-index-slim-example.tex  inverted-list-index-slim-updatable-insertop.tex  inverted-list-materialized-worst-case.tex  node-index-example.tex  node-index-slim-example.tex  node-index-slim-updatable-insertop.tex  running-example-cone.tex  running-example-lower-bound-merge.tex  running-example-shincone.tex  running-example-shining-up-paths.tex  running-example.tex  update-document-after-insert.tex  update-document-before-insert.tex
queries/fig12_ab/: xmark16_query_16_1.xml  xmark16_query_16_2.xml  xmark16_query_16_4.xml  xmark1_query_16_2.xml  xmark2_query_16_4.xml  xmark4_query_16_1.xml
queries/fig12_e/: xmark8_query_16_1.xml
queries/fig13_ab/: xmark16_query_16_3.xml  xmark1_query_16_1.xml
queries/fig13_cd/: treebank_query_16_1.xml  uniprot_sprot_query_16_2.xml
queries/fig14_ab/: xmark1_query_16_3.xml  xmark2_query_16_1.xml  xmark2_query_16_2.xml  xmark4_query_16_4.xml  xmark8_query_16_3.xml  xmark8_query_16_4.xml
queries/fig14_cd/: dblp_query_16_1.xml  uniprot_sprot_query_16_4.xml
queries/fig15_ab/: xmark8_query_16_2.xml  xmark8_query_32_2.xml  xmark8_query_4_1.xml  xmark8_query_4_3.xml  xmark8_query_64_1.xml  xmark8_query_64_2.xml  xmark8_query_8_1.xml
queries/fig15_cd/: dblp_query_16_3.xml  dblp_query_4_1.xml  dblp_query_4_3.xml  dblp_query_4_4.xml  dblp_query_64_4.xml  treebank_query_4_3.xml  treebank_query_4_4.xml  treebank_query_64_2.xml  treebank_query_64_3.xml  treebank_query_64_4.xml  uniprot_sprot_query_16_1.xml  uniprot_sprot_query_4_2.xml  uniprot_sprot_query_4_4.xml  uniprot_sprot_query_64_2.xml  uniprot_sprot_query_64_3.xml
queries/fig16_cd/: dblp_query_16_4.xml
report/: bibliography.bib  report.tex
slim/: CMakeLists.txt  LICENSE
slim/include/: CMakeLists.txt
slim/src/: CMakeLists.txt  topk_queries.cc
slim/src/common/: hash_functors.h  log.h  statistics.h  timing.cc  timing.h
slim/src/data_structures/: array_2d.h  k_heap.h  label_hash_map.h  vector_multimap.h
slim/src/data_structures/tasm/: tasm_tree.h
slim/src/distance/: tasmted.h  tasmted_impl.h
slim/src/filter/: abstract_cone_filter.h  abstract_cone_filter_impl.h  abstract_filter.h  abstract_filter_impl.h  cone_filter.h  cone_filter_impl.h  label_overlap_filter.h  label_overlap_filter_impl.h  lower_bound_merge_filter.h  lower_bound_merge_filter_impl.h  shin_cone_filter.h  shin_cone_filter_impl.h  updatable_shin_cone_filter.h  updatable_shin_cone_filter_impl.h
slim/src/index/: abstract_index.h  abstract_index_impl.h  abstract_inverted_list_index.h  abstract_inverted_list_index_impl.h  abstract_inverted_map_index.h  abstract_inverted_map_index_impl.h  inverted_list_index.h  inverted_list_index_impl.h  slim_inverted_list_index.h  slim_inverted_list_index_impl.h  slim_inverted_map_index.h  slim_inverted_map_index_impl.h
slim/src/interfaces/tasm/: postorder_queue_interface.h  postorder_source_interface.h
slim/src/nodes/: node.h  string_node_data.h
slim/src/parser/: abstract_event_handler.h  default_event_handler.h  label_set_event_handler.h  label_set_event_handler_impl.h  label_set_index_event_handler.h  label_set_index_event_handler_impl.h  postorder_queue_event_handler.h  xml_parser.h
slim/src/tasm/: tasm_dynamic.h
slim/src/wrappers/: node_distance_pair.h
tasm-struct/: CMakeLists.txt
tasm-struct/include/: CMakeLists.txt
tasm-struct/src/: CMakeLists.txt  tree_similarity.cc  tree_similarity.h
tasm-struct/src/common/: common.h  hash_functors.h  timing.cc  timing.h
tasm-struct/src/data_structures/: array_2d.h  btree.h  dewey_identifier.h  k_heap.h  label_hash_map.h  posting_list_container.h
tasm-struct/src/data_structures/structure_search/: ss_tree.h
tasm-struct/src/data_structures/tasm/: postorder_queue.h  ring_buffer_tree.h  tasm_tree.h
tasm-struct/src/interfaces/tasm/: postorder_queue_interface.h  postorder_source_interface.h
tasm-struct/src/nodes/: node.h  string_node_data.h  tasm_string_node_data.h
tasm-struct/src/parser/: abstract_event_handler.h  common_label_event_handler.h  default_event_handler.h  index_event_handler.h  parser.h  postorder_queue_event_handler.h  xml_parser.h  xml_postorder_source.h
tasm-struct/src/rted/: rted.h
tasm-struct/src/sed/: string_edit_distance.h
tasm-struct/src/structure_search/: structure_search.h  structure_search_impl.h
tasm-struct/src/tasm/: tasm_dynamic.h  tasm_postorder.h
tasm-struct/src/upper_bound/: upper_bound.h
tasm-struct/src/visualisation/: visualisation.h
tasm-struct/src/wrappers/: dewey_postorder_pair.h  node_distance_pair.h  node_index_value.h  pure_structure_index_value.h  structure_index_value.h
tasm-struct/src/zhang_shasha/: zhang_shasha.h
tmp/: executable
(+155 files in other folders)
